Fix logo too large on landscape/wide screens
Replace width: unset with width: 80px on the 670px+ breakpoint.
unset was falling back to the SVG's intrinsic size which could be huge.

--- a/takauma/styles/index.module.css
+++ b/takauma/styles/index.module.css
@@ -90,7 +90,7 @@
 		margin-top: -0.65em;
 	}
 	.applogo img {
-		width: unset;
+		width: 80px;
 	}
 }
 
